--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hola mundo:D</h1>
 
     <script src="./tipos-de-datos.js"></script>
+    <script src="./ActividadEnClase.js"></script>
 </body>
 </html>
