--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Hola mundo:D</h1>
 
-    <script src="./tipos-de-datos.js"></script>
-    <script src="./ActividadEnClase.js"></script>
+    <!-- <script src="./tipos-de-datos.js"></script>
+    // <script src="./ActividadEnClase1.js"></script> -->
+    <script src="./Comparaciones-y-decisiones.js"></script>
+
 </body>
 </html>
