--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Hola mundo:D</h1>
 
     <!-- <script src="./tipos-de-datos.js"></script>
-    // <script src="./ActividadEnClase1.js"></script> -->
+    <script src="./ActividadEnClase1.js"></script>
     <script src="./Comparaciones-y-decisiones.js"></script>
+    <script src="./ActividadEnClase2.js"></script> -->
+    <script src="./Arreglos-y-ciclos.js"></script>
 
 </body>
 </html>
