Agrego actividad de la clase 3

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <!-- <script src="./tipos-de-datos.js"></script>
     <script src="./ActividadEnClase1.js"></script>
     <script src="./Comparaciones-y-decisiones.js"></script>
-    <script src="./ActividadEnClase2.js"></script> -->
-    <script src="./Arreglos-y-ciclos.js"></script>
+    <script src="./ActividadEnClase2.js"></script> 
+    <script src="./Arreglos-y-ciclos.js"></script> -->
+    <script src="./ActividadEnClase3.js"></script>
 
 </body>
 </html>
