Agrego funciones en javascript

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="./ActividadEnClase1.js"></script>
     <script src="./Comparaciones-y-decisiones.js"></script>
     <script src="./ActividadEnClase2.js"></script> 
-    <script src="./Arreglos-y-ciclos.js"></script> -->
-    <script src="./ActividadEnClase3.js"></script>
-
+    <script src="./Arreglos-y-ciclos.js"></script>
+    <script src="./ActividadEnClase3.js"></script> --> 
+    <script src="./Funciones-en-javascript.js"></script>
 </body>
 </html>
