agrego actividad Intro al Dom y actividad de clase Dashboard

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="./ActividadEnClase2.js"></script> 
     <script src="./Arreglos-y-ciclos.js"></script>
     <script src="./ActividadEnClase3.js"></script> 
-    <script src="./Funciones-en-javascript.js"></script> -->
-    <script src="./Objetos-en-javascript.js"></script>
+    <script src="./Funciones-en-javascript.js"></script> 
+    <script src="./Objetos-en-javascript.js"></script> -->
 </body>
 </html>
