Agregue boton de eliminar

--- a/AppDeComentarios.html
+++ b/AppDeComentarios.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="AppDeComentarios.css">
 </head>
 <body>
-    <h1>¡Exprésate aquí!</h1>
+    <h1> Mi app </h1>
+    <h2>¡Exprésate aquí!</h2>
     <form id="commentForm">
         <textarea id="commentInput" placeholder="Haz un comentario..." required></textarea>
         <button type="submit">Agregar comentario</button>
