agrego local storage y apartado para escribir un nombre

--- a/AppDeComentarios.html
+++ b/AppDeComentarios.html
@@ -10,6 +10,7 @@
     <h1> Mi app </h1>
     <h2>¡Exprésate aquí!</h2>
     <form id="commentForm">
+        <input type="text" id="nameInput" placeholder="Tu nombre (opcional)">
         <textarea id="commentInput" placeholder="Haz un comentario..." required></textarea>
         <button type="submit">Agregar comentario</button>
     </form>
