corregi js y deletebutton

--- a/AppDeComentarios.html
+++ b/AppDeComentarios.html
@@ -12,7 +12,9 @@
     <form id="commentForm">
         <input type="text" id="nameInput" placeholder="Tu nombre (opcional)">
         <textarea id="commentInput" placeholder="Haz un comentario..." required></textarea>
+        <div class="button-container">
         <button type="submit">Agregar comentario</button>
+        </div>
     </form>
     <div id="commentsContainer"></div>
     <script src="AppDeComentarios.js"></script>
